标准结构 & 部分配置中心代码